@@ -24,8 +24,6 @@ jobs:
         cache: 'pip' # caching pip dependencies
         allow-prereleases: true
 
-    - run: pip install -r .requirements.txt
-
     - name: setup apt dependencies
       run: |
         sudo apt-get update
@@ -39,10 +37,15 @@ jobs:
         MPLBACKEND: agg
       run: |
         python -m pip install --upgrade pip
-        python -m pip install wheel
-        python -m pip install -e .[all]
+        python -m pip install wheel build
+        python -m build
+        python -m pip install dist/*.whl
+        pip install -r .requirements.txt
+
         # uses xvfb for GUI part of the test
-        xvfb-run pytest
+        pushd tools
+        xvfb-run pytest --pyargs refnx
+        popd
 
         # check that refnx gui starts
         # python tools/app/check_app_starts.py refnx
@@ -82,7 +85,7 @@ jobs:
 
   test_macos:
 
-    runs-on: macos-latest
+    runs-on: macos-13
     strategy:
       fail-fast: true
       max-parallel: 3
@@ -97,8 +100,6 @@ jobs:
         python-version: ${{ matrix.python-version }}
         cache: 'pip' # caching pip dependencies
         allow-prereleases: true
-
-    - run: pip install -r .requirements.txt
 
     - run: mkdir -p dist
 
@@ -116,9 +117,8 @@ jobs:
         DYLD_LIBRARY_PATH: /usr/local/opt/libomp/lib
       run: |
         python -m pip install --upgrade pip
-        python -m pip install wheel delocate
-
-        python -m pip wheel . --no-deps -w dist
+        python -m pip install wheel delocate build
+        python -m build .
         # so that libomp is distributed with wheel
         delocate-wheel -v dist/refnx*.whl
 
@@ -126,6 +126,7 @@ jobs:
       env:
         MPLBACKEND: agg
       run: |
+        pip install -r .requirements.txt
         pushd dist
         python -m pip install --only-binary=refnx --no-index --find-links=. refnx
 
