@@ -3,7 +3,7 @@ requires = [
     "setuptools",
     "cython",
     "wheel",
-    "numpy>=1.25.0",
+    "numpy>=2.0.0rc1",
 ]
 build-backend = "setuptools.build_meta"
 
@@ -27,7 +27,7 @@ classifiers = [
     "Topic :: Scientific/Engineering :: Physics",
 ]
 dependencies = [
-    "numpy",
+    "numpy>=1.23.5",
     "scipy",
     "orsopy",
 ]
